--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -62,7 +62,7 @@ services:
       dockerfile: Dockerfile.dev
     container_name: workflow-frontend-dev
     environment:
-      VITE_API_URL: http://localhost:3001/api
+      VITE_API_URL: /api
     ports:
       - "3000:3000"
     depends_on:
